# Visual_MediaCrawler

./: .gitignore  LICENSE  README.md  db.py  db_init.py  main.py  pyproject.toml  requirements.txt  var.py
.docs_site/: package-lock.json
.docs_site/site_config/: 1.使用说明.md  3.项目代码结构.md  5.项目环境管理指南.md  6.存在问题-未来计划.md  8.开源协议.md  Origin_README.md  README.md  index.md
.github/workflows/: deploy-docs.yml  deploy.yml
.vercel/: project.json
api/: README.md  __init__.py  api.py  api_run.bat  extra_mysql_api.py  extra_sqlite_api.py  static_page_api.py
cmd_arg/: arg.py
config/: base_config.py  db_config.py
debug_tools/: README.md  README_DELETE_TOOLS.md  batch_delete_tasks.py  compare_db_schemas.py  create_db.py  db_analyzer.py  delete_task_data.py  example_task_ids.txt  quick_analyze.py  quick_delete_task.py
debug_tools/output/: database_structure_20250713_025332.sql
docs/: ENCODING_FIX_README.md  Origin_README.md  STATIC_INTEGRATION_GUIDE.md  hybrid_database_storage.md  package.json  sqlite_default_configuration.md  sqlite_frontend_integration.md  人工验证使用指南.md  百度贴吧反爬虫解决方案.md
docs/site_config/: 1.使用说明.md  2.数据库初始化指南.md  4.API接口文档.md  7.免责声明.md  Origin_README.md  README.md  index.md
dp_op/: __init__.py  async_mysql_db.py  async_sqlite_db.py  db_tables_mapping.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js  style.css
media_platform/bilibili/: client.py
media_platform/kuaishou/: client.py
proxy/: base_proxy.py
schema/: mysql_tables.sql  sqlite_tables.db  sqlite_tables.sql  tables.sql
(+43 files in other folders)
